--- a/ios-developer.html
+++ b/ios-developer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/endurance/jobs/1857816?gh_src=3e45c3701'>Job Application for Senior iOS Developer at Endurance International Group</a></h5> 
+<p><span class="badge badge-light">Waltham, MA</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Square/743999698532533-ios-senior-engineer-mobile-developer-experience'>Square iOS Senior Engineer, Mobile Developer Experience | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -293,7 +297,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
+<h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -369,7 +373,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Our purpose is to make it easy to find good quality, trusted providers by using 
 latest technologies and machine learning algorithms. We have served 5 million?...</p>
@@ -407,7 +411,7 @@ designed apps (in terms of technical design) and why. This is open ended and?...
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/traderev/8779bce1-a76c-4151-b026-5d029751743e?lever-source=Careerjet'>TradeRev - Senior iOS Developer (SDEIII)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 25, 2019 ... Senior iOS Developer (SDEIII). Toronto, Ontario, Canada. Engineering ? 
 Software Development. Full-time. Apply for this job. TradeRev is an online 
@@ -445,7 +449,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Schaumburg, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -457,10 +461,6 @@ automotive?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MobileProgrammingLLC/743999696681449-android-ios-developer'>Mobile Programming LLC Android/iOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-10-05</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4457417002'>Job Application for iOS Developer at SumUp</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
 
